--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Get Feed
 
 on:
   schedule:
-    - cron: "*/5 * * * *" # 6pm IST
+    - cron: "57 * * * *" # 6pm IST
   workflow_dispatch:
 
 jobs:
